Add adaptiv стили хедеру

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </header>
     <main>
 
-      <!-- --------------------------------------------Герой------------------------------------------ -->
+      <!-- -------------------------------Герой------------------------------------------ -->
       <section class="hero">
         <!--   class="footer-bg"    -->
         <div class="hero-box">
@@ -133,7 +133,7 @@
         </div>
       </section>
 
-      <!-- ------------------------------блок Преимущества---------------------------------------------------------------------- -->
+      <!-- -----------------------------блок Преимущества---------------------------------------------------------------------- -->
       <section class="advant-section">
         <div class="container">
           <h2 class="visually-hidden">Преимущества</h2>
@@ -183,7 +183,7 @@
         </div>
       </section>
 
-      <!-- --------------------Блок Чем мы занимаемся---------------------------------------------------------------------- -->
+      <!-- -----------------------------Блок Чем мы занимаемся---------------------------------------------------------------------- -->
       <section class="whatWeDo">
         <div class="container">
           <h2 class="logo">Чем мы занимаемся</h2>
@@ -222,7 +222,7 @@
         </div>
       </section>
 
-      <!-- -------------------------Наша команда-------------------------------------------------------------------------- -->
+      <!-- -----------------------------Наша команда-------------------------------------------------------------------------- -->
       <section class="team">
         <div class="container">
           <h2 class="logo team-title">Наша команда</h2>
@@ -475,7 +475,7 @@
         </div>
       </section>
 
-      <!-- ----------------------Постянные клиенты----------------------- -->
+      <!-- -----------------------------Постянные клиенты----------------------- -->
       <section class="clients">
         <div class="container">
           <h2 class="logo">Постоянные клиенты</h2>
@@ -539,7 +539,7 @@
       </section>
     </main>
 
-    <!-- -----------------------Footer----------------------------------- -->
+    <!-- -------------------------------Footer----------------------------------- -->
     <footer class="footer footer-bg">
       <div class="container footer-flexBox">
         <div>
