Add Секция Преимущества серый фон

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <section class="advant-section">
         <div class="container">
           <h2 class="visually-hidden">Преимущества</h2>
-          <ul class="advatn">
+          <ul class="advant">
             <li class="advant-list">
               <svg class="advant-svg" width="270px" height="120px">
                 <use href="./images/sprite.svg#icon-antenna"></use>
