Add adaptive стили списку Наша команда

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <ul class="our-team">
             <li class="team-list">
               <img src="./images/john.jpg" alt="img_john" class="image-block" />
-              <p lang="en" class="logo">John Smith</p>
+              <p lang="en" class="logo">Николай Кучеренко</p>
               <p class="proffesion">Product Designer</p>
               <ul class="our-team-links">
                 <li>
@@ -291,7 +291,7 @@
                 alt="img_marta"
                 class="image-block"
               />
-              <p lang="en" class="logo">Marta Stewart</p>
+              <p lang="en" class="logo">Ольга Иванова</p>
               <p class="proffesion">Frontend Developer</p>
               <ul class="our-team-links">
                 <li>
@@ -353,7 +353,7 @@
                 alt="img_robert"
                 class="image-block"
               />
-              <p lang="en" class="logo">Robert Jakis</p>
+              <p lang="en" class="logo">Андрей Шевченко</p>
               <p class="proffesion">Marketing</p>
               <ul class="our-team-links">
                 <li>
@@ -415,7 +415,7 @@
                 alt="img_martin"
                 class="image-block"
               />
-              <p lang="en" class="logo">Martin Doe</p>
+              <p lang="en" class="logo">Иван Николаев</p>
               <p class="proffesion">UI Designer</p>
               <ul class="our-team-links">
                 <li>
