Add adaptive style секции Пост. клиенты - tablet

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                 alt="img_martin"
                 class="image-block"
               />
-              <p lang="en" class="logo">Иван Николаев</p>
+              <p lang="en" class="logo">Иван Николае</p>
               <p class="proffesion">UI Designer</p>
               <ul class="our-team-links">
                 <li>
