Add adaptive style for Footer -AddressBox

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
     <!-- -------------------------------Footer----------------------------------- -->
     <footer class="footer footer-bg">
       <div class="container footer-flexBox">
-        <div>
+        <div class="footer-addressBox">
           <a href="./index.html" class="logo logo-font-footer focus-text">
             <p class="" lang="en">
               <b
