Add adaptive style for Footer  - ALL sections Mobile

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
         </div>
         <div class="footerLinks-box">
           <p class="white-text footer-title">
-            <b>ПРИСОЕДИНЯЙТЕСЬ</b>
+            ПРИСОЕДИНЯЙТЕСЬ
           </p>
 
           <ul class="links-list">
@@ -631,7 +631,7 @@
         </div>
         <div class="footerMail-box">
           <p class="white-text footer-title">
-            <b>ПОДПИСАТЬСЯ НА РАССЫЛКУ</b>
+            ПОДПИШИТЕСЬ НА РАССЫЛКУ
           </p>
           <form action="url" name="e-mail" class="footer-form">
             <input
@@ -645,7 +645,6 @@
           </form>
         </div>
       </div>
-      <p class="madeByStudents">2020 | Developed by GoIT Students</p>
     </footer>
     <script src="./js/modal.js"></script>
     </body>
