Add adaptive style for Portfolio - mobile

--- a/portfolio.html
+++ b/portfolio.html
@@ -297,7 +297,7 @@
   <!-- =======================ФУТЕР=================================== -->
   <footer class="footer footer-bg">
     <div class="container footer-flexBox">
-      <div>
+      <div class="footer-addressBox">
         <a href="./index.html" class="logo logo-font-footer focus-text">
           <p class="" lang="en">
             <b
@@ -374,7 +374,7 @@
       </div>
       <div class="footerMail-box">
         <p class="white-text footer-title">
-          <b>ПОДПИСАТЬСЯ НА РАССЫЛКУ</b>
+          ПОДПИШИТЕСЬ НА РАССЫЛКУ
         </p>
         <form action="url" name="e-mail" class="footer-form">
           <input
@@ -387,6 +387,5 @@
         </form>
       </div>
     </div>
-    <p class="madeByStudents">2020 | Developed by GoIT Students</p>
   </footer>
 </html>
