--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
           </li>
         </ul>
       </div>
+
+      <button></button>
+      <svg width="40px" height="40px">
+        <use href="./images/sprite.svg#icon-mobile-menu"></use>
+        <use href="./images/sprite.svg#icon-close"></use>
+      </svg>
     </header>
     <main>
 
