--- a/index.html
+++ b/index.html
@@ -60,13 +60,16 @@
             </a>
           </li>
         </ul>
+
+        <button class="mobile-menu-button is-open" aria-expanded="false">
+        <svg width="40px" height="40px" aria-label="Переключатель мобильного меню">
+          <use class="icon-menu" href="./images/sprite.svg#icon-mobile-menu"></use>
+          <use class="icon-cross" href="./images/sprite.svg#icon-mobile-close"></use>
+        </svg>
+        </button>
       </div>
 
-      <button></button>
-      <svg width="40px" height="40px">
-        <use href="./images/sprite.svg#icon-mobile-menu"></use>
-        <use href="./images/sprite.svg#icon-close"></use>
-      </svg>
+
     </header>
     <main>
 
