--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </li>
         </ul>
 
-        <button class="mobile-menu-button is-open" aria-expanded="false">
+        <button type="button" class="mobile-menu-button is-open" aria-expanded="false" data-menu-button >
         <svg width="40px" height="40px" aria-label="Переключатель мобильного меню">
           <use class="icon-menu" href="./images/sprite.svg#icon-mobile-menu"></use>
           <use class="icon-cross" href="./images/sprite.svg#icon-mobile-close"></use>
@@ -661,6 +661,7 @@
       </div>
     </footer>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
     </body>
   </body>
 </html>
