--- a/index.html
+++ b/index.html
@@ -24,42 +24,40 @@
             <b><span class="logo-blue">Web</span> Studio</b>
           </p>
         </a>
-        <nav>
-          <ul class="header-menu">
-            <li class="nav-list">
-              <a href="" class="logo nav-font hover-text current">Студия</a>
+        <div class="menu-container">
+          <nav>
+            <ul class="header-menu">
+              <li class="nav-list">
+                <a href="" class="logo nav-font hover-text current">Студия</a>
+              </li>
+              <li class="nav-list">
+                <a href="./portfolio.html" class="logo nav-font hover-text">Портфолио</a>
+              </li>
+              <li class="nav-list">
+                <a href="" class="logo nav-font hover-text">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+          
+          <ul class="nav-contacts">
+            <li>
+              <a href="mailto:info@devstudio.com" class="contacts nav-font hover-text"><svg class="decoration">
+                  <use href="./images/sprite.svg#icon-envelope"></use>
+                </svg>
+                <span>info@devstudio.com</span>
+              </a>
             </li>
-            <li class="nav-list">
-              <a href="./portfolio.html" class="logo nav-font hover-text"
-                >Портфолио</a
-              >
-            </li>
-            <li class="nav-list">
-              <a href="" class="logo nav-font hover-text">Контакты</a>
+            <li>
+              <a href="tel:+380961111111" class="contacts nav-font hover-text"><svg class="decoration">
+                  <use href="./images/sprite.svg#icon-smartphone"></use>
+                </svg>
+                <span>+38 096 111 11 11</span>
+              </a>
             </li>
           </ul>
-        </nav>
 
-        <ul class="nav-contacts">
-          <li>
-            <a
-              href="mailto:info@devstudio.com"
-              class="contacts nav-font hover-text"
-              ><svg class="decoration">
-                <use href="./images/sprite.svg#icon-envelope"></use>
-              </svg>
-              <span>info@devstudio.com</span>
-            </a>
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="contacts nav-font hover-text"
-              ><svg class="decoration">
-                <use href="./images/sprite.svg#icon-smartphone"></use>
-              </svg>
-              <span>+38 096 111 11 11</span>
-            </a>
-          </li>
-        </ul>
+        </div>
+        
 
         <button type="button" class="mobile-menu-button is-open" aria-expanded="false" data-menu-button >
         <svg width="40px" height="40px" aria-label="Переключатель мобильного меню">
@@ -67,6 +65,7 @@
           <use class="icon-cross" href="./images/sprite.svg#icon-mobile-close"></use>
         </svg>
         </button>
+ 
       </div>
 
 
