--- a/index.html
+++ b/index.html
@@ -55,11 +55,9 @@
               </a>
             </li>
           </ul>
-
         </div>
         
-
-        <button type="button" class="mobile-menu-button is-open" aria-expanded="false" data-menu-button >
+        <button type="button" class="mobile-menu-button" aria-expanded="false" data-menu-button > 
         <svg width="40px" height="40px" aria-label="Переключатель мобильного меню">
           <use class="icon-menu" href="./images/sprite.svg#icon-mobile-menu"></use>
           <use class="icon-cross" href="./images/sprite.svg#icon-mobile-close"></use>
